--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -23,8 +23,8 @@
             <a href="#">Home<i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu">
               <ul>
-                <li><a href="login.php">Login</a></li>
-                <li><a href="diseases.php">Diseases</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="diseases.html">Diseases</a></li>
               </ul>
             </div>
           </li>
@@ -35,10 +35,10 @@
             <a href="#">Services<i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu">
               <ul>
-                <li><a href="doctor.php">Doctors</a></li>
+                <li><a href="doctor.html">Doctors</a></li>
                 <li><a href="LAB.html">Lab reports</a></li>
                 <li><a href="pharmacy.html">Pharmacy</a></li>
-                <li><a href="payment.php">Payments</a></li>
+                <li><a href="payment.html">Payments</a></li>
                 <li><a href="channel_Dr.html">Channeling</a></li>
               </ul>
             </div>
