--- a/FrontEnd/doctor1.html
+++ b/FrontEnd/doctor1.html
@@ -1,73 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="../CSS/doctor1.css" />
-    <title>Our project</title>
+    <title>doctors</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <section>
-      <div class="menu-bar">
-        <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
-        <ul>
-          <li>
-            <a href="#">Home<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="login.php">Login</a></li>
-                <li><a href="diseases.php">Diseases</a></li>
-              </ul>
-            </div>
-          </li>
-          <!--        ---------------------------------->
-          <li><a href="about_us.html">About us</a></li>
-          <!--        ==================---------------->
-          <li>
-            <a href="#">Services<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="doctor.php">Doctors</a></li>
-                <li><a href="LAB.html">Lab reports</a></li>
-                <li><a href="pharmacy.html">Pharmacy</a></li>
-                <li><a href="payment.php">Payments</a></li>
-                <li><a href="channel_Dr.html">Channeling</a></li>
-              </ul>
-            </div>
-          </li>
-          <!--        ========================-->
-          <li><a href="contact.html">Contact us</a></li>
-          <!------------------------>
+        <div class="menu-bar">
+            <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
+            <ul>
+                <li>
+                    <a href="#">Home<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="login.html">Login</a></li>
+                            <li><a href="diseases.html">Diseases</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ---------------------------------->
+                <li><a href="about_us.html">About us</a></li>
+                <!--        ==================---------------->
+                <li>
+                    <a href="#">Services<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor.html">Doctors</a></li>
+                            <li><a href="LAB.html">Lab reports</a></li>
+                            <li><a href="pharmacy.html">Pharmacy</a></li>
+                            <li><a href="payment.html">Payments</a></li>
+                            <li><a href="channel_Dr.html">Channeling</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ========================-->
+                <li><a href="contact.html">Contact us</a></li>
+                <!------------------------>
 
-          <li>
-            <a href="feedback.html">Feedback</a>
-          </li>
+                <li>
+                    <a href="feedback.html">Feedback</a>
+                </li>
 
-          <!---------------------->
-          <li><a href="map.html">Location</a></li>
+                <!---------------------->
+                <li><a href="map.html">Location</a></li>
 
-          <!--        --------------->
-          <li>
-            <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="doctor_signup.html">Doctor</a></li>
-                <li><a href="patient_reg.html ">Patient</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
+                <!--        --------------->
+                <li>
+                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor_signup.html">Doctor</a></li>
+                            <li><a href="patient_reg.html ">Patient</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <section>
-      <div class="hero">&nbsp;</div>
+        <div class="hero">&nbsp;</div>
     </section>
 
     <!----------------------->
@@ -75,25 +73,20 @@
     <h1 style="text-align: center">Doctor Details</h1>
     <br />
     <div class="row">
-      <div class="column">
-        <div class="hero">&nbsp;</div>
-        <div class="card">
-          <img src="../Images/doctor1.jpg" alt="Jane" style="width: 70%" />
+        <div class="column">
+            <div class="hero">&nbsp;</div>
+            <div class="card">
+                <img src="../Images/doctor1.jpg" alt="Jane" style="width: 70%" />
 
-          <h2>Dr.Roshan Gunawardana</h2>
-          <p class="title">Cardiologist</p>
-          <p>
-            Registration Number:7346 <br />
-            Qualification: MBBS,MD,DM (cardiology)<br />
-            Business Phone Number: 0741281300<br />
-            Roshangunawardana@gmail.com <br />
-            Experience : 17 years<br />
-            Specialization : Cardiology<br />
-            Languages spoken: English,Sinhala <br />
-            Awards & Achievements: Most Trusted Cardiologist of the year Award.
-          </p>
+                <h2>Dr.Roshan Gunawardana</h2>
+                <p class="title">Cardiologist</p>
+                <p>
+                    Registration Number:7346 <br /> Qualification: MBBS,MD,DM (cardiology)<br /> Business Phone Number: 0741281300<br /> Roshangunawardana@gmail.com <br /> Experience : 17 years<br /> Specialization : Cardiology<br /> Languages spoken:
+                    English,Sinhala <br /> Awards & Achievements: Most Trusted Cardiologist of the year Award.
+                </p>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
