--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -58,8 +58,8 @@
                     <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="./FrontEnd/doctor_signup.html ">Doctor</a></li>
-                            <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
+                            <li><a href="doctor_signup.html ">Doctor</a></li>
+                            <li><a href="patient_reg.html ">Patient</a></li>
                         </ul>
                     </div>
                 </li>
@@ -74,7 +74,7 @@
     </section>
     <br><br><br><br>
 
-    <form action="/PHP/login.php " method="POST ">
+    <form action="doctor.html" method="POST ">
         <div class="form ">
             <center>
                 <h1>LOGIN HERE</h1>
@@ -88,9 +88,9 @@
             <center>
                 <a href="mailto:srihrtcntr@gmail.com ">Forgot password? </a>
                 <br><br><br>
-                <input type="submit " name=" " value="LOGIN " onclick="validate() ">
+                <input type="submit" name=" " value="LOGIN " onclick="validate() ">
                 <br><br><br><br>
-                <a href="/FrontEnd/patient_reg.html " class="btn ">Not Registered Sign Up</a>
+                <a href="patient_reg.html " class="btn ">Not Registered Sign Up</a>
         </div>
         </center>
         <div>
