--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
                     <a href="index.html ">Home</a>
                 </li>
                 <li>
-                    <a href="/FrontEnd/contact.html ">Contact Us</a>
+                    <a href="./FrontEnd/contact.html ">Contact Us</a>
                 </li>
                 <li>
-                    <a href="/FrontEnd/about_us.html ">About</a>
+                    <a href="./FrontEnd/about_us.html ">About</a>
                 </li>
                 <li>
-                    <a href="/FrontEnd/privacy.html">Privacy Policy</a>
+                    <a href="./FrontEnd/privacy.html">Privacy Policy</a>
                 </li>
                 <li>
-                    <a href="FrontEnd/terms.html">Terms</a>
+                    <a href="./FrontEnd/terms.html">Terms</a>
                 </li>
             </ul>
         </section>
