--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -30,8 +30,8 @@
                 <div class="dropdown-menu">
                     <ul>
                         <li><a href="doctor.html">Doctors</a></li>
-                        <li><a href="LAB.html">Lab reports</a></li>
-                        <li><a href="pharmacy.html">Pharmacy</a></li>
+                        <li><a href="/LAB/index.html">Lab reports</a></li>
+                        <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
                         <li><a href="payment.html">Payments</a></li>
                         <li><a href="channel_Dr.html">Channeling</a></li>
                     </ul>
@@ -42,18 +42,18 @@
             <!------------------------>
 
             <li>
-                <a href="./FrontEnd/feedback.html">Feedback</a>
+                <a href="./FEED_BACK/1.html ">Feedback</a>
             </li>
 
             <!---------------------->
-            <li><a href="./FrontEnd/map.html">Location</a></li>
+            <li><a href="./FrontEnd/map.html ">Location</a></li>
 
             <!--        --------------->
             <li>
-                <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-                <div class="dropdown-menu">
+                <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
+                <div class="dropdown-menu ">
                     <ul>
-                        <li><a href="./FrontEnd/doctor_signup.html">Doctor</a></li>
+                        <li><a href="./FrontEnd/doctor_signup.html ">Doctor</a></li>
                         <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
 
 
 
-    <div class="hero">&nbsp;</div>
+    <div class="hero ">&nbsp;</div>
     </section>
     <br /><br />
 
@@ -73,60 +73,60 @@
         <h1>Select Doctor</h1>
     </center>
     <center>
-        <div class="tours">
-            <div class="places">
+        <div class="tours ">
+            <div class="places ">
                 <h2>Dr.Roshan Gunawardana</h2>
-                <img src="../Images/doctor1.jpg" style="width: 250px; height: 250px; border-radius: 12px" />
+                <img src="../Images/doctor1.jpg " style="width: 250px; height: 250px; border-radius: 12px " />
                 <br />
                 <br />
-                <a href="doctor1.html">Select</a>
+                <a href="doctor1.html ">Select</a>
             </div>
-            <div class="places">
+            <div class="places ">
                 <h2>Dr.Sushani Amarasinghe</h2>
-                <img src="../Images/doctor2.jpg" style="width: 250px; height: 250px; border-radius: 12px" />
+                <img src="../Images/doctor2.jpg " style="width: 250px; height: 250px; border-radius: 12px " />
                 <br />
                 <br />
-                <a href="doctor2.html">Select</a>
+                <a href="doctor2.html ">Select</a>
             </div>
-            <div class="places">
+            <div class="places ">
                 <h2>Dr.Asunga Dunuwille</h2>
-                <img src="../Images/doctor3.jpg" style="width: 250px; height: 250px; border-radius: 12px" />
+                <img src="../Images/doctor3.jpg " style="width: 250px; height: 250px; border-radius: 12px " />
                 <br />
                 <br />
-                <a href="doctor3.html">Select</a>
+                <a href="doctor3.html ">Select</a>
             </div>
         </div>
 
-        <div class="tours">
-            <div class="places">
+        <div class="tours ">
+            <div class="places ">
                 <h2>Dr.Tiran Dias</h2>
-                <img src="../Images/doctor4.jpg" style="width: 250px; height: 250px; border-radius: 12px" />
+                <img src="../Images/doctor4.jpg " style="width: 250px; height: 250px; border-radius: 12px " />
                 <br />
                 <br />
-                <a href="doctor4.html">Select</a>
+                <a href="doctor4.html ">Select</a>
             </div>
-            <div class="places">
+            <div class="places ">
                 <h2>Dr.Hermoine Granger</h2>
-                <img src="../Images/doctor5.jpg" style="width: 250px; height: 250px; border-radius: 12px" />
+                <img src="../Images/doctor5.jpg " style="width: 250px; height: 250px; border-radius: 12px " />
                 <br />
                 <br />
-                <a href="doctor5.html">Select </a>
+                <a href="doctor5.html ">Select </a>
             </div>
 
-            <div class="places">
+            <div class="places ">
                 <h2>Dr.Harry</h2>
-                <img src="../Images/doctor6.jpg" style="width: 250px; height: 250px; border-radius: 12px" />
+                <img src="../Images/doctor6.jpg " style="width: 250px; height: 250px; border-radius: 12px " />
                 <br />
                 <br />
-                <a href="doctor6.html">Select</a>
+                <a href="doctor6.html ">Select</a>
             </div>
         </div>
     </center>
     <br /><br /><br /><br />
 
-    <section id="footer">
-        <footer id="foot">
-            <p class="copyright">
+    <section id="footer ">
+        <footer id="foot ">
+            <p class="copyright ">
                 Copyright ©2022 All rights reserved | Made by Team Medical Capstone
             </p>
         </footer>
