--- a/FrontEnd/privacy.html
+++ b/FrontEnd/privacy.html
@@ -34,8 +34,8 @@
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="doctor.html">Doctors</a></li>
-                            <li><a href="LAB.html">Lab reports</a></li>
-                            <li><a href="pharmacy.html">Pharmacy</a></li>
+                            <li><a href="/LAB/index.html">Lab reports</a></li>
+                            <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="payment.html">Payments</a></li>
                             <li><a href="channel_Dr.html">Channeling</a></li>
                         </ul>
@@ -46,7 +46,7 @@
                 <!------------------------>
 
                 <li>
-                    <a href="feedback.html">Feedback</a>
+                    <a href="/FEED_BACK/1.html">Feedback</a>
                 </li>
 
                 <!---------------------->
