--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="./FrontEnd/doctor.html">Doctors</a></li>
-                            <li><a href="./FrontEnd/LAB.html">Lab reports</a></li>
-                            <li><a href="./FrontEnd/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="./LAB/index.html">Lab reports</a></li>
+                            <li><a href="./pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="./FrontEnd/payment.html">Payments</a></li>
                             <li><a href="./FrontEnd/channel_Dr.html">Channeling</a></li>
                         </ul>
@@ -48,7 +48,7 @@
                 <!------------------------>
 
                 <li>
-                    <a href="./FrontEnd/feedback.html">Feedback</a>
+                    <a href="./FEED_BACK/1.html">Feedback</a>
                 </li>
 
                 <!---------------------->
@@ -134,7 +134,7 @@
                     <a href="./FrontEnd/privacy.html">Privacy Policy</a>
                 </li>
                 <li>
-                    <a href="./FrontEnd/terms.html">Terms</a>
+                    <a href="./terms and conditions/term.html">Terms</a>
                 </li>
             </ul>
         </section>
