--- a/pharmacy/pharmacy.html
+++ b/pharmacy/pharmacy.html
@@ -1,87 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet"href="pharmacy.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="pharmacy.css" />
+    <title>pharmacy</title>
+</head>
 <section>
     <div class="menu-bar">
         <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
         <ul>
-            <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
+            <li>
+                <a href="#">Home<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown-menu">
                     <ul>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Diseases</a></li>
-                        <li><a href="#">About Us</a></li>
-                    </ul>
-                </div>
-             </li>  
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
-                <div class="dropdown-menu">
-                    <ul>
-                        <li><a href="#Doctor">Doctors</a></li>
-                        <li><a href="#">Lab reports</a></li>
-                        <li><a href="#">Pharmacy</a></li>
-                        <li><a href="#">Payments</a></li>
-                        <li><a href="#">Diseases</a></li>
-                        <li><a href="#">Channeling</a></li>
-                    </ul>
-                </div>
-               </li>
-      <li><a href="#">Contact us<i class="fas fa-caret-down"></i></a>
-
-                <div class="dropdown-menu">
-                    <ul>
-                        <li><a href="#">contact</a></li>
-                        <li><a href="#">Customer Care</a></li>
-                        <li><a href="#">Ambulance</a></li>
-                        <li><a href="#">E-mail</a></li>
-
-                    </ul>
-                </div>
-
-            </li>
-
-            <li><a href="#">Feedback<i class="fas fa-caret-down"></i></a>
-
-                <div class="dropdown-menu">
-                    <ul>
-                        <li><a href="#">Rate us</a></li>
-                        <li><a href="#">Review</a></li>
-
+                        <li><a href="/FrontEnd/login.html">Login</a></li>
+                        <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
                     </ul>
                 </div>
             </li>
-            <li><a href="#">Location</a>
-            </li>
-            <li><a href="#">Sign up<i class="fas fa-caret-down"></i></a>
+            <li><a href="# ">About Us</a></li>
+            <li>
+                <a href="# ">Services<i class="fas fa-caret-down"></i></a>
                 <div class="dropdown-menu">
                     <ul>
-                        <li><a href="#">Doctor</a></li>
-                        <li><a href="#">Patient</a></li>
-
+                        <li><a href="/FrontEnd/doctor.html">Doctors</a></li>
+                        <li><a href="/LAB/index.html ">Lab reports</a></li>
+                        <li><a href="/pharmacy/pharmacy.html ">Pharmacy</a></li>
+                        <li><a href="/FrontEnd/payment.html ">Payments</a></li>
+                        <li><a href="# ">Channeling</a></li>
                     </ul>
                 </div>
             </li>
+            <li>
+                <a href="/FrontEnd/contact.html ">Contact us<i class="fas fa-caret-down"></i></a>
+            </li>
 
+            <li>
+                <a href="/FEED_BACK/1.html ">Feedback<i class="fas fa-caret-down"></i
+            ></a>
+            </li>
+
+            <li><a href="/FrontEnd/map.html ">Location</a></li>
+            <li>
+                <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="# ">Doctor</a></li>
+                        <li><a href="# ">Patient</a></li>
+                    </ul>
+                </div>
+            </li>
         </ul>
     </div>
 </section>
 </head>
-<body>
-        <div class="contact-box">
-          <form action="add.php" method="post">
-              <h1 >PHARMCY</h1>
-             
-              <input type="text" class="input-field" placeholder="User Name" name="user_name" >
-              <input type="text" class="input-field" name="medicine_name" placeholder="Medicine Name">
-            
-              <button type="submit" class="btn" value="SUBMIT">Check Availability</button>
-             </form> 
-        </div>                  
-        </body>
-        </html>
 
+<body>
+    <div class="contact-box">
+        <form action="add.php " method="post ">
+            <h1>PHARMACY</h1>
+
+            <input type="text " class="input-field" placeholder="User Name " name="user_name " />
+            <input type="text " class="input-field" name="medicine_name " placeholder="Medicine Name " />
+
+            <button type="submit " class="btn" value="SUBMIT ">
+          Check Availability
+        </button>
+        </form>
+    </div>
+</body>
+
+</html>
