--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -1,140 +1,139 @@
 <!DOCTYPE html>
 <html lang="en ">
-  <head>
+
+<head>
     <meta charset="UTF-8 " />
     <meta http-equiv="X-UA-Compatible " content="IE=edge " />
     <meta name="viewport " content="width=device-width, initial-scale=1.0 " />
     <title>Contact Us</title>
 
     <link rel="stylesheet " href="../CSS/contact.css" />
-    <link
-      rel="stylesheet "
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css "
-    />
-  </head>
+    <link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css " />
+</head>
 
-  <body>
+<body>
     <!-- header section starts  -->
     <section>
-      <div class="menu-bar">
-        <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
-        <ul>
-          <li>
-            <a href="#">Home<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="diseases.html">Diseases</a></li>
-              </ul>
-            </div>
-          </li>
-          <!--        ---------------------------------->
-          <li><a href="about_us.html">About us</a></li>
-          <!--        ==================---------------->
-          <li>
-            <a href="#">Services<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="doctor.html">Doctors</a></li>
-                <li><a href="LAB.html">Lab reports</a></li>
-                <li><a href="pharmacy.html">Pharmacy</a></li>
-                <li><a href="payment.html">Payments</a></li>
-                <li><a href="channel_Dr.html">Channeling</a></li>
-              </ul>
-            </div>
-          </li>
-          <!--        ========================-->
-          <li><a href="contact.html">Contact us</a></li>
-          <!------------------------>
+        <div class="menu-bar">
+            <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
+            <ul>
+                <li>
+                    <a href="#">Home<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="login.html">Login</a></li>
+                            <li><a href="diseases.html">Diseases</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ---------------------------------->
+                <li><a href="about_us.html">About us</a></li>
+                <!--        ==================---------------->
+                <li>
+                    <a href="#">Services<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor.html">Doctors</a></li>
+                            <li><a href="/LAB/index.html">Lab reports</a></li>
+                            <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="payment.html">Payments</a></li>
+                            <li><a href="channel_Dr.html">Channeling</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ========================-->
+                <li><a href="contact.html">Contact us</a></li>
+                <!------------------------>
 
-          <li>
-            <a href="feedback.html">Feedback</a>
-          </li>
+                <li>
+                    <a href="/FEED_BACK/1.html">Feedback</a>
+                </li>
 
-          <!---------------------->
-          <li><a href="map.html">Location</a></li>
+                <!---------------------->
+                <li><a href="map.html">Location</a></li>
 
-          <!--        --------------->
-          <li>
-            <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="docoty_signup.html">Doctor</a></li>
-                <li><a href="patient_reg.html ">Patient</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
+                <!--        --------------->
+                <li>
+                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="docoty_signup.html">Doctor</a></li>
+                            <li><a href="patient_reg.html ">Patient</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <!-- header section ends  -->
 
     <!--content starts here-->
     <div class="contact">
-      <div class="title">
-        <h2>Contact Us</h2>
-      </div>
-      <center>
-        <div class="box">
-          <div class="card">
-            <i class="fa fa-hospital-user" aria-hidden="true "></i>
-            <h2>Hotline</h2>
-            <br />
-            <div class="par">
-              <p>
-                <b>134134<br /><br />236587</b>
-              </p>
-            </div>
-          </div>
+        <div class="title">
+            <h2>Contact Us</h2>
         </div>
-        <div class="box">
-          <div class="card">
-            <i class="fa fa-phone" aria-hidden="true "></i>
-            <h2>Custom care</h2>
-            <br />
-            <div class="par">
-              <p><b>0373760808</b></p>
+        <center>
+            <div class="box">
+                <div class="card">
+                    <i class="fa fa-hospital-user" aria-hidden="true "></i>
+                    <h2>Hotline</h2>
+                    <br />
+                    <div class="par">
+                        <p>
+                            <b>134134<br /><br />236587</b>
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="box">
-          <div class="card">
-            <i class="fa fa-location" aria-hidden="true "></i>
-            <h2>Address</h2>
-            <br />
-            <div class="par">
-              <p><b>No. 3 Colombo Street</b></p>
+            <div class="box">
+                <div class="card">
+                    <i class="fa fa-phone" aria-hidden="true "></i>
+                    <h2>Custom care</h2>
+                    <br />
+                    <div class="par">
+                        <p><b>0373760808</b></p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="box">
-          <div class="card">
-            <i class="fa fa-ambulance" aria-hidden="true "></i>
-            <h2>Ambulance</h2>
-            <br />
-            <div class="par">
-              <p>
-                <b>+9411 543 1088-9<br /><br />+9472 7111088</b>
-              </p>
+            <div class="box">
+                <div class="card">
+                    <i class="fa fa-location" aria-hidden="true "></i>
+                    <h2>Address</h2>
+                    <br />
+                    <div class="par">
+                        <p><b>No. 3 Colombo Street</b></p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="box">
-          <div class="card">
-            <i class="fa fa-envelope" aria-hidden="true "></i>
-            <h2>Email</h2>
-            <br />
-            <div class="par">
-              <p><b>srihrtcntr@gmail.com</b></p>
+            <div class="box">
+                <div class="card">
+                    <i class="fa fa-ambulance" aria-hidden="true "></i>
+                    <h2>Ambulance</h2>
+                    <br />
+                    <div class="par">
+                        <p>
+                            <b>+9411 543 1088-9<br /><br />+9472 7111088</b>
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </center>
+            <div class="box">
+                <div class="card">
+                    <i class="fa fa-envelope" aria-hidden="true "></i>
+                    <h2>Email</h2>
+                    <br />
+                    <div class="par">
+                        <p><b>srihrtcntr@gmail.com</b></p>
+                    </div>
+                </div>
+            </div>
+        </center>
     </div>
     <footer>
-      <p class="copyright">
-        ©2022 All rights reserved | Made by Team Medical Capstone
-      </p>
+        <p class="copyright">
+            ©2022 All rights reserved | Made by Team Medical Capstone
+        </p>
     </footer>
-  </body>
+</body>
+
 </html>
