--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,142 +9,137 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="../CSS/payment.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- section section starts  -->
 
     <section>
-      <div class="menu-bar">
-        <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
-        <ul>
-          <li>
-            <a href="#">Home<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="diseases.html">Diseases</a></li>
-              </ul>
-            </div>
-          </li>
-          <!--        ---------------------------------->
-          <li><a href="about_us.html">About us</a></li>
-          <!--        ==================---------------->
-          <li>
-            <a href="#">Services<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="doctor.html">Doctors</a></li>
-                <li><a href="LAB.html">Lab reports</a></li>
-                <li><a href="pharmacy.html">Pharmacy</a></li>
-                <li><a href="payment.html">Payments</a></li>
-                <li><a href="channel_Dr.html">Channeling</a></li>
-              </ul>
-            </div>
-          </li>
-          <!--        ========================-->
-          <li><a href="contact.html">Contact us</a></li>
-          <!------------------------>
+        <div class="menu-bar">
+            <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
+            <ul>
+                <li>
+                    <a href="#">Home<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="login.html">Login</a></li>
+                            <li><a href="diseases.html">Diseases</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ---------------------------------->
+                <li><a href="about_us.html">About us</a></li>
+                <!--        ==================---------------->
+                <li>
+                    <a href="#">Services<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor.html">Doctors</a></li>
+                            <li><a href="/LAB/index.html">Lab reports</a></li>
+                            <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="payment.html">Payments</a></li>
+                            <li><a href="channel_Dr.html">Channeling</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ========================-->
+                <li><a href="contact.html">Contact us</a></li>
+                <!------------------------>
 
-          <li>
-            <a href="feedback.html">Feedback</a>
-          </li>
+                <li>
+                    <a href="/FEED_BACK/1.html">Feedback</a>
+                </li>
 
-          <!---------------------->
-          <li><a href="map.html">Location</a></li>
+                <!---------------------->
+                <li><a href="map.html">Location</a></li>
 
-          <!--        --------------->
-          <li>
-            <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-            <div class="dropdown-menu">
-              <ul>
-                <li><a href="doctor_signup.html">Doctor</a></li>
-                <li><a href="patient_reg.html ">Patient</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
+                <!--        --------------->
+                <li>
+                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor_signup.html">Doctor</a></li>
+                            <li><a href="patient_reg.html ">Patient</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <br /><br /><br /><br /><br /><br /><br />
 
     <div class="container">
-      <form action="/PHP/payment.php" method="POST">
-        <div class="row">
-          <div class="col">
-            <h3 class="title">billing address</h3>
+        <form action="/PHP/payment.php" method="POST">
+            <div class="row">
+                <div class="col">
+                    <h3 class="title">billing address</h3>
 
-            <div class="inputBox">
-              <span>full name :</span>
-              <input type="text" placeholder="Kamala Pathirana" />
-            </div>
-            <div class="inputBox">
-              <span>email :</span>
-              <input type="email" placeholder="example@example.com" />
-            </div>
-            <div class="inputBox">
-              <span>address :</span>
-              <input type="text" placeholder="no. - street" />
-            </div>
-            <div class="inputBox">
-              <span>city :</span>
-              <input type="text" placeholder="colombo" />
+                    <div class="inputBox">
+                        <span>full name :</span>
+                        <input type="text" placeholder="Kamala Pathirana" />
+                    </div>
+                    <div class="inputBox">
+                        <span>email :</span>
+                        <input type="email" placeholder="example@example.com" />
+                    </div>
+                    <div class="inputBox">
+                        <span>address :</span>
+                        <input type="text" placeholder="no. - street" />
+                    </div>
+                    <div class="inputBox">
+                        <span>city :</span>
+                        <input type="text" placeholder="colombo" />
+                    </div>
+
+                    <div class="flex">
+                        <div class="inputBox">
+                            <span>state :</span>
+                            <input type="text" placeholder="Sri Lanka" />
+                        </div>
+                        <div class="inputBox">
+                            <span>zip code :</span>
+                            <input type="text" placeholder="81 000" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <h3 class="title">payment</h3>
+
+                    <div class="inputBox">
+                        <span>cards accepted :</span>
+                        <img src="/Images/img.png" alt="" />
+                    </div>
+                    <div class="inputBox">
+                        <span>name on card :</span>
+                        <input type="text" placeholder="Mrs. Kamala Pathirana" />
+                    </div>
+                    <div class="inputBox">
+                        <span>credit card number :</span>
+                        <input type="number" placeholder="1111 2222 3333 4444" />
+                    </div>
+                    <div class="inputBox">
+                        <span>exp month : </span>
+                        <input type="text" placeholder="march" />
+                    </div>
+
+                    <div class="flex">
+                        <div class="inputBox">
+                            <span>exp year :</span>
+                            <input type="number" placeholder="2025" />
+                        </div>
+                        <div class="inputBox">
+                            <span>CVV :</span>
+                            <input type="text" placeholder="123" />
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="flex">
-              <div class="inputBox">
-                <span>state :</span>
-                <input type="text" placeholder="Sri Lanka" />
-              </div>
-              <div class="inputBox">
-                <span>zip code :</span>
-                <input type="text" placeholder="81 000" />
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <h3 class="title">payment</h3>
-
-            <div class="inputBox">
-              <span>cards accepted :</span>
-              <img src="/Images/img.png" alt="" />
-            </div>
-            <div class="inputBox">
-              <span>name on card :</span>
-              <input type="text" placeholder="Mrs. Kamala Pathirana" />
-            </div>
-            <div class="inputBox">
-              <span>credit card number :</span>
-              <input type="number" placeholder="1111 2222 3333 4444" />
-            </div>
-            <div class="inputBox">
-              <span>exp month : </span>
-              <input type="text" placeholder="march" />
-            </div>
-
-            <div class="flex">
-              <div class="inputBox">
-                <span>exp year :</span>
-                <input type="number" placeholder="2025" />
-              </div>
-              <div class="inputBox">
-                <span>CVV :</span>
-                <input type="text" placeholder="123" />
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <input
-          type="submit"
-          value="proceed to pay"
-          class="submit-btn"
-          a
-          href="/index.html"
-        />
-      </form>
-      <!--link to js--->
-      <script type="text/javascript " src="/JS/payment.js"></script>
+            <input type="submit" value="proceed to pay" class="submit-btn" a href="/index.html" />
+        </form>
+        <!--link to js--->
+        <script type="text/javascript " src="/JS/payment.js"></script>
     </div>
-  </body>
+</body>
+
 </html>
