--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -80,7 +80,9 @@
                     <br />
                     <div class="par">
                         <p>
-                            <b>134134<br /><br />236587</b>
+                            <a href="tel:134134"><b>134134</b></a>
+                            <br><br>
+                            <a href="tel:236587"><b>235687</b>
                         </p>
                     </div>
                 </div>
@@ -88,10 +90,12 @@
             <div class="box">
                 <div class="card">
                     <i class="fa fa-phone" aria-hidden="true "></i>
-                    <h2>Custom care</h2>
-                    <br />
+                    <h2>Custom Care</h2>
+                    <br/>
                     <div class="par">
-                        <p><b>0373760808</b></p>
+                        <p>
+                            <a href="tel:0373760808"><b>0373760808</b></a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -99,9 +103,11 @@
                 <div class="card">
                     <i class="fa fa-location" aria-hidden="true "></i>
                     <h2>Address</h2>
-                    <br />
+                    <br/>
                     <div class="par">
-                        <p><b>No. 3 Colombo Street</b></p>
+                        <p>
+                            <a href="map.html"><b>No. 3 Colombo Street</b></a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -112,25 +118,34 @@
                     <br />
                     <div class="par">
                         <p>
-                            <b>+9411 543 1088-9<br /><br />+9472 7111088</b>
+                            <a href="tel:+9411 543 1088-9" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">
+                                <p class="call-button"><b>+9411 543 1088-9</b></p>
+                            </a>
+                            <br><br>
+                            <a href="tel:+9472 7111088" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">
+                                <p class="call-button"><b>+9472 7111088</b></p>
+                            </a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="box">
-                <div class="card">
-                    <i class="fa fa-envelope" aria-hidden="true "></i>
+            <div class=" box ">
+                <div class="card ">
+                    <i class="fa fa-envelope " aria-hidden="true "></i>
                     <h2>Email</h2>
                     <br />
-                    <div class="par">
-                        <p><b>srihrtcntr@gmail.com</b></p>
+                    <div class="par ">
+                        <p>
+                            <b><a href="mailto: srihrtcntr@gmail.com ">srihrtcntr@gmail.com</b>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
         </center>
     </div>
     <footer>
-        <p class="copyright">
+        <p class="copyright ">
             ©2022 All rights reserved | Made by Team Medical Capstone
         </p>
     </footer>
