--- a/frontEnd/channel.html
+++ b/frontEnd/channel.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
 <style>
 body, html {
   height: 100%;
@@ -79,8 +81,9 @@ button:hover {
   background-color: rgb(155, 9, 4);
  
 }
-
 </style>
+
+
 <script type="text/javascript">
   function validate()
   {
@@ -113,9 +116,10 @@ button:hover {
 
     }
   }
-
 </script>
+
 </head>
+
 <body>
 
 <div class="bg-image"></div>
@@ -123,7 +127,7 @@ button:hover {
 <div class="bg-text">
 <h1><b>Meet Your Doctor</b></h1>
  
-<form action="/PHP/connact.php" method="post" name="channel_form" onsubmit="return validate()">
+<form action="/PHP/connect1.php" method="post" name="channel_form" onsubmit="return validate()">
     
     <p>Doctor Name:</p> 
     <select name="Name" id="doctor_name"  placeholder="Select Doctor Name ">
