--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/login.css">
-    <script src=" /JS/login.js "></script>
+    <script src="/JS/login.js"></script>
     <title>login here</title>
 
 </head>
@@ -74,7 +74,7 @@
     </section>
     <br><br><br><br>
 
-    <form action="doctor.html" method="POST ">
+    <form action="/PHP/login.php" method="POST ">
         <div class="form ">
             <center>
                 <h1>LOGIN HERE</h1>
