--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -107,7 +107,7 @@
 
                     <div class="inputBox">
                         <span>cards accepted :</span>
-                        <img src="/Images/img.png" alt="" />
+                        <img src="../Images/img.png" alt="" />
                     </div>
                     <div class="inputBox">
                         <span>name on card :</span>
