--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -82,7 +82,7 @@
                         <p>
                             <a href="tel:134134"><b>134134</b></a>
                             <br><br>
-                            <a href="tel:236587"><b>235687</b>
+                            <a href="tel:236587"><b>235687</b></a>
                         </p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <br/>
                     <div class="par">
                         <p>
-                            <a href="tel:0373760808"><b>0373760808</b></a>
+                            <a href="tel:077-3760808"><b>077-3760808</b></a>
                         </p>
                     </div>
                 </div>
