--- a/FrontEnd/diseases.html
+++ b/FrontEnd/diseases.html
@@ -47,7 +47,7 @@
                 <!------------------------>
 
                 <li>
-                    <a href="/FEED_BACK/1.html">Feedback</a>
+                    <a href="./FEED_BACK/1.html">Feedback</a>
                 </li>
 
                 <!---------------------->
@@ -58,8 +58,8 @@
                     <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="doctor_signup.html">Doctor</a></li>
-                            <li><a href="patient_reg.html ">Patient</a></li>
+                            <li><a href="./FrontEnd/dr_signup.html ">Doctor</a></li>
+                            <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
                         </ul>
                     </div>
                 </li>
