--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a href="./LAB/index.html">Lab reports</a></li>
                             <li><a href="./pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="./FrontEnd/payment.html">Payments</a></li>
-                            <li><a href="./FrontEnd/channel_Dr.html">Channeling</a></li>
+                            <li><a href="FrontEnd\channel.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
@@ -59,8 +59,8 @@
                     <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="./FrontEnd/doctor_signup.html">Doctor</a></li>
-                            <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
+                            <li><a href="FrontEnd\dr_signup.html">Doctor</a></li>
+                            <li><a href="FrontEnd\patient_reg.html">Patient</a></li>
                         </ul>
                     </div>
                 </li>
