--- a/FEED_BACK/1.html
+++ b/FEED_BACK/1.html
@@ -38,7 +38,7 @@
         </div>
         <br />
         <div class="btn-2">
-            <a href="/index.html"><button type="submit">Return to home page</button>
+            <a href="../index.html"><button type="submit">Return to home page</button>
         </a>
         </div>
     </div>
