--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -83,12 +83,11 @@
         <input type="text " name="" placeholder="Name Here">
         <p>Password :</p>
         <input type="password" name="" placeholder="Password Here" id="pass">
-        <br>
-        <input type="checkbox" onclick="myFunction()">
+        <br><br> Show password<input type="checkbox" onclick="myFunction()">
         <center>
             <a href="mailto:srihrtcntr@gmail.com ">Forgot password?</a>
             <br><br>
-            <input type="submit" name="" value="LOGIN" onclick="validate()">
+            <input type="submit" name="" value="LOGIN " onclick="validate()">
             <br><br><br>
             <a href="patient_reg.html " class="btn ">Not Registered Sign Up</a>
     </div>
