--- a/frontEnd/dr_signup.html
+++ b/frontEnd/dr_signup.html
@@ -173,7 +173,7 @@
           length.classList.add("invalid");
         }
         }
-        function myfunction() {
+        function myFunction() {
     var x = document.getElementById("doctor_id");
 
     if (x.type === "password") {
