--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -136,6 +136,10 @@
             </div>
 
             <input type="submit" value="proceed to pay" class="submit-btn" a href="/index.html" />
+            <br><br>
+            <center>
+                <p><span class="color-red">*</span>&nbsp;Channeling fees will be Rs. 1500.00</p>
+            </center>
         </form>
         <!--link to js--->
         <script type="text/javascript " src="/JS/payment.js"></script>
