--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -75,29 +75,29 @@
                     <h3 class="title">billing address</h3>
 
                     <div class="inputBox">
-                        <span>full name :</span>
+                        <span>Full_name :</span>
                         <input type="text" placeholder="Kamala Pathirana" />
                     </div>
                     <div class="inputBox">
-                        <span>email :</span>
+                        <span>Email :</span>
                         <input type="email" placeholder="example@example.com" />
                     </div>
                     <div class="inputBox">
-                        <span>address :</span>
+                        <span>Address :</span>
                         <input type="text" placeholder="no. - street" />
                     </div>
                     <div class="inputBox">
-                        <span>city :</span>
+                        <span>City :</span>
                         <input type="text" placeholder="colombo" />
                     </div>
 
                     <div class="flex">
                         <div class="inputBox">
-                            <span>state :</span>
+                            <span>State :</span>
                             <input type="text" placeholder="Sri Lanka" />
                         </div>
                         <div class="inputBox">
-                            <span>zip code :</span>
+                            <span>zip_code :</span>
                             <input type="text" placeholder="81 000" />
                         </div>
                     </div>
@@ -110,25 +110,25 @@
                         <img src="../Images/img.png" alt="" />
                     </div>
                     <div class="inputBox">
-                        <span>name on card :</span>
+                        <span>Name_on_card :</span>
                         <input type="text" placeholder="Mrs. Kamala Pathirana" />
                     </div>
                     <div class="inputBox">
-                        <span>credit card number :</span>
+                        <span>Credit_card_number :</span>
                         <input type="number" placeholder="1111 2222 3333 4444" />
                     </div>
                     <div class="inputBox">
-                        <span>exp month : </span>
+                        <span>Exp_month : </span>
                         <input type="text" placeholder="march" />
                     </div>
 
                     <div class="flex">
                         <div class="inputBox">
-                            <span>exp year :</span>
+                            <span>Exp_year :</span>
                             <input type="number" placeholder="2025" />
                         </div>
                         <div class="inputBox">
-                            <span>CVV :</span>
+                            <span>cvv:</span>
                             <input type="text" placeholder="123" />
                         </div>
                     </div>
