--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -135,7 +135,7 @@
                 </div>
             </div>
 
-            <input type="submit" value="proceed to pay" class="submit-btn" a href="/index.html" onclick="validate()" />
+            <input type="submit" value="proceed to pay" class="submit-btn" onclick="validate()" />
             <br /><br />
             <center>
                 <p>
