--- a/frontEnd/dr_signup.html
+++ b/frontEnd/dr_signup.html
@@ -34,7 +34,10 @@
         background-size: cover;
     }
     /* Position text in the middle of the page/image */
-    
+    .back{
+        text-decoration: lightblue;
+
+    }
     .bg-text {
         background-color: rgb(0, 0, 0);
         /* Fallback color */
@@ -81,6 +84,7 @@
         cursor: pointer;
         background-color: rgb(155, 9, 4);
     }
+    
 </style>
 <script type="text/javascript">
     function validate() {
@@ -113,24 +117,24 @@
     <div class="bg-image"></div>
 
     <div class="bg-text">
-        <h1><b>Doctor Signup</b></h1>
+        <h1><b>Doctor Signup</b></h1><br><br>
 
         <form action="/PHP/connect2.php" method="post" name="dr_signup" onsubmit="return validate()">
 
             <p>Doctor Name:</p>
-            <input type="text" id="doctor_name" name="Name" placeholder=""><br>
+            <input type="text" id="doctor_name" name="Name" placeholder="" required><br><br>
 
             <p>Doctor ID:</p>
-            <input type="password" id="doctor_id" name="ID" placeholder="xxxx">
+            <input type="password" id="doctor_id" name="ID" placeholder="xxxx" required>
             <p id="number" class="invalid"></p>
             <p id="length" class="invalid"></p> <br><br>
 
-            <button type="submit">Signup</button>
+            <button type="submit">Signup</button><br><br>
 
             <div>
                 <p>Already have an account? <a href="../FrontEnd/login.html">Log in</a></p>
-            </div>
-            <p> <a href="../index.html">Go Back</a></p>
+            </div><br>
+            <p class="back"> <a href="../index.html">Go Back</a></p>
         </form>
     </div>
 
