--- a/frontEnd/patient_reg.html
+++ b/frontEnd/patient_reg.html
@@ -73,19 +73,93 @@
             margin-bottom: 10px;
         }
     </style>
+
+    <script type="text/javascript">
+        //form validation code will come here
+        function validation()
+        {
+            if(document.reg_form.f_name.value=="")
+            {
+                alert("Please provide your First Name");
+                document.reg_form.f_name.focus();
+                return false;
+            }
+            if(document.reg_form.l_name.value=="")
+            {
+                alert("Please provide your Last Name");
+                document.reg_form.l_name.focus();
+                return false;
+            }
+            if(document.reg_form.u_name.value=="")
+            {
+                alert("Please provide your User Name");
+                document.reg_form.u_name.focus();
+                return false;
+            }
+            if(document.reg_form.nic.value=="")
+            {
+                alert("Please provide your NIC");
+                document.reg_form.nic.focus();
+                return false;
+            }
+            if(document.reg_form.gender.value=="")
+            {
+                alert("Please provide your Gender");
+                document.reg_form.gender.focus();
+                return false;
+            }
+            if(document.reg_form.blood_grp.value=="")
+            {
+                alert("Please provide your Blood Group");
+                document.reg_form.blood_grp.focus();
+                return false;
+            }
+            if(document.reg_form.dob.value=="")
+            {
+                alert("Please provide your Date Of Birth");
+                document.reg_form.dob.focus();
+                return false;
+            }
+            if(document.reg_form.email.value=="")
+            {
+                alert("Please provide your Email");
+                document.reg_form.email.focus();
+                return false;
+            }
+            if(document.reg_form.pwd.value=="")
+            {
+                alert("Please provide your Password");
+                document.reg_form.pwd.focus();
+                return false;
+            }
+            if(document.reg_form.pwd-repeat.value=="")
+            {
+                alert("Please provide your Confirm Password");
+                document.reg_form.pwd-repeat.focus();
+                return false;
+            }
+            if(document.reg_form.phn_no.value=="")
+            {
+                alert("Please provide your Phone Number");
+                document.reg_form.phn_no.focus();
+                return false;
+            }
+            
+        }
+    </script>
 </head>
 
 <body>
 
 
-    <form action="/PHP/connect1.php" method="post">
+    <form action="/PHP/connect1.php" method="post" name="reg_form" onsubmit="return validation()">
 
         <div class="container">
             <h1>Register</h1>
             <p>Kindly fill in this form to register.</p>
 
             <label for="username"><b>First Name :</b></label>
-            <input type="text" placeholder="Enter First Name" name="f_name" id="f_name" required/>
+            <input type="text" placeholder="Enter First Name" name="f_name" id="f_name">
 
             <label for="username"><b>Last Name :</b></label>
             <input type="text" placeholder="Enter Last Name" name="l_name" id="l_name" required/>
@@ -103,7 +177,7 @@
                 <div class="category"></div>
                 <input type="radio" id="gender" name="gender" value="Female">Female</label>
                 <g>
-                    <input type="radio" id="gender" name="gender" value="Male">Male</label><br>
+                <input type="radio" id="gender" name="gender" value="Male">Male</label><br>
             </div>
 
 
@@ -111,11 +185,11 @@
             <input type="text" placeholder="Enter Blood Group" name="blood_grp" id="blood_grp" required/>
 
             <label for="email"><b>Birthday :</b></label>
-            <input type="date" placeholder="Enter BOD" name="bod" id="bod" required/>
+            <input type="date" placeholder="Enter BOD" name="dob" id="bod" required/>
 
 
             <label for="email"><b>Email :</b></label>
-            <input type="text" placeholder="Enter Email" name="email" id="email" required/>
+            <input type="text" placeholder="example@mail.com" name="email" id="email" required/>
 
             <label for="pwd"><b>Password :</b></label>
             <input type="password" placeholder="Enter Password" name="pwd" id="pwd" required/>
