--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -39,7 +39,8 @@
                             <li><a href="/pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="payment.html">Payments</a></li>
                             <li>
-                                <a href="/FrontEnd/channel.html">Channeling</a></li>
+                                <a href="/FrontEnd/channel.html">Channeling</a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -56,8 +57,8 @@
 
                 <!--        --------------->
                 <li>
-                    <a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
-                    <div class="dropdown-menu ">
+                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
                         <ul>
                             <li><a href="/FrontEnd/dr_signup.html ">Doctor</a></li>
                             <li><a href="/FrontEnd/patient_reg.html ">Patient</a></li>
@@ -69,66 +70,66 @@
     </section>
     <br /><br /><br /><br /><br /><br /><br />
 
-    <div class="container ">
+    <div class="container">
         <form action="/PHP/payment.php " method="POST ">
-            <div class="row ">
-                <div class="col ">
-                    <h3 class="title ">billing address</h3>
+            <div class="row">
+                <div class="col">
+                    <h3 class="title">billing address</h3>
 
-                    <div class="inputBox ">
+                    <div class="inputBox">
                         <span>Full_name :</span>
                         <input type="text " placeholder="Kamala Pathirana " />
                     </div>
-                    <div class="inputBox ">
+                    <div class="inputBox">
                         <span>Email :</span>
                         <input type="email " placeholder="example@example.com " />
                     </div>
-                    <div class="inputBox ">
+                    <div class="inputBox">
                         <span>Address :</span>
                         <input type="text " placeholder="no. - street " />
                     </div>
-                    <div class="inputBox ">
+                    <div class="inputBox">
                         <span>City :</span>
                         <input type="text " placeholder="colombo " />
                     </div>
 
-                    <div class="flex ">
-                        <div class="inputBox ">
+                    <div class="flex">
+                        <div class="inputBox">
                             <span>State :</span>
                             <input type="text " placeholder="Sri Lanka " />
                         </div>
-                        <div class="inputBox ">
+                        <div class="inputBox">
                             <span>zip_code :</span>
                             <input type="text " placeholder="81 000 " />
                         </div>
                     </div>
                 </div>
-                <div class="col ">
-                    <h3 class="title ">payment</h3>
+                <div class="col">
+                    <h3 class="title">payment</h3>
 
-                    <div class="inputBox ">
+                    <div class="inputBox">
                         <span>cards accepted :</span>
                         <img src="../Images/img.png " alt=" " />
                     </div>
-                    <div class="inputBox ">
-                        <span>Name_on_card :</span>
+                    <div class="inputBox">
+                        <span>Name on card :</span>
                         <input type="text " placeholder="Mrs. Kamala Pathirana " />
                     </div>
-                    <div class="inputBox ">
-                        <span>Credit_card_number :</span>
+                    <div class="inputBox">
+                        <span>Credit card number :</span>
                         <input type="number " placeholder="1111 2222 3333 4444 " />
                     </div>
-                    <div class="inputBox ">
-                        <span>Exp_month : </span>
+                    <div class="inputBox">
+                        <span>Exp month : </span>
                         <input type="text " placeholder="march " />
                     </div>
 
-                    <div class="flex ">
-                        <div class="inputBox ">
-                            <span>Exp_year :</span>
+                    <div class="flex">
+                        <div class="inputBox">
+                            <span>Exp year :</span>
                             <input type="number " placeholder="2025 " />
                         </div>
-                        <div class="inputBox ">
+                        <div class="inputBox">
                             <span>cvv:</span>
                             <input type="text " placeholder="123 " />
                         </div>
@@ -136,16 +137,16 @@
                 </div>
             </div>
 
-            <input type="submit " value="proceed to pay " class="submit-btn " onclick="validate() " />
+            <input type="submit " value="proceed to pay " class="submit-btn" onclick="validate() " />
             <br /><br />
             <center>
                 <p>
-                    <span class="color-red ">*</span>&nbsp;Channeling fees will be Rs. 1500.00
+                    <span class="color-red">*</span>&nbsp;Channeling fees will be Rs. 1500.00
                 </p>
             </center>
         </form>
         <!--link to js--->
-        <script type="text/javascript " src="/JS/payment.js "></script>
+        <script type="text/javascript " src="/JS/payment.js"></script>
     </div>
 </body>
 
